<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_header_general">

        <ListPreference
            app:key="language"
            app:title="@string/pref_title_language"
            app:dialogTitle="@string/pref_dialog_title_language"
            app:entries="@array/pref_language_entries"
            app:entryValues="@array/pref_language_values"
            app:defaultValue="default"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_header_about">

        <Preference
            app:key="version"
            app:title="@string/pref_title_version"
            app:summary="@string/version_number" />

    </PreferenceCategory>

</PreferenceScreen>